# my-url-shortener

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
.sqlx/: query-a24a5af765118a8bbd363abdf3359b7b3ebca7ff433d6821a56b0d3aa4493de9.json  query-dd8cd00d8f68fd41f6d88e4a737c1107e1fa56c565bfcb45f0947e2fd0091832.json
migrations/: 20230305201503_create_urls_table.sql
src/: ids.rs  main.rs  urls.rs
static/: index.html  index.js
